# cg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build.zbuffer/: build.bat
docs/: zbuffer.docx
misc/cmake/: config.cmake
misc/resources/objs/: .bunny.obj.swp
src/: CMakeLists.txt
src/ggl/: CMakeLists.txt  README.md  main.cpp
src/radiosity/: CMakeLists.txt
src/radiosity/src/: CMakeLists.txt  Postprocess.cu  Postprocess.h  cornell_box.cpp  cornell_box.hpp  glcu.cpp  glcu.cu  glcu.hpp  io.cpp  io.hpp  main.cpp  ppm.cpp  ppm.hpp
src/radiosity/src/adapt/: openmesh.cpp  openmesh.hpp
src/radiosity/src/core/: color_coding.hpp  ffengine.hpp  ffengine_core.hpp  ffengine_impl.hpp  ffvec.hpp  ffvec_impl.hpp  hemicube.hpp  hemicube_impl.hpp  log.hpp  rader.hpp  rader_impl.hpp  sd.hpp
src/radiosity/src/core/concepts/: color3r.hpp  mesh.hpp  patch.hpp  patch_handle.hpp  vector3r.hpp
src/radiosity/src/core/gpu/: calcff.cu  calcff.hpp  ffengine.cpp  ffengine.cu  ffengine.hpp  ffengine_impl.hpp  glcu.cpp  glcu.cu  glcu.hpp
src/z-buffer/: CMakeLists.txt  color.hpp  matrix_stack.hpp  qrender_target.hpp  render_operation.hpp  render_target.cpp  render_target.hpp  renderer.cpp
src/z-buffer/include/: camera.hpp  planf.hpp  rasterize_impl.hpp  renderer.hpp  renderer_impl.hpp
src/z-buffer/src/: matrix_stack.cpp  renderer.cpp
src/z-buffer/test/: CMakeLists.txt  test_zbuffer.cpp
src/zbuffer/: CMakeLists.txt
src/zbuffer/include/: canvas.hpp  mainwindow.hpp  qrender_target.hpp  renderer_functions.hpp  view.hpp
src/zbuffer/include/aint/: common_decl.hpp  interact.hpp  interact_impl.hpp
src/zbuffer/include/core/: camera.hpp  color.hpp  common_decl.hpp  gpu.hpp  log.hpp  matrix_stack.hpp  model.hpp  planf.hpp  rasterize.hpp  rasterize_impl.hpp  render_model.hpp  renderer.hpp  renderer_impl.hpp  wavefront_obj_loader.hpp
src/zbuffer/include/core/concepts/: camera.hpp  depth_buffer.hpp  frame_buffer.hpp  triangle.hpp  viewport.hpp
src/zbuffer/include/widgets/: log_table.hpp
src/zbuffer/src/: CMakeLists.txt  canvas.cpp  main.cpp  mainwindow.cpp  renderer_functions.cpp  view.cpp
src/zbuffer/src/core/: camera.cpp  gpu.cu  matrix_stack.cpp  render_model.cpp  render_operation.cpp  renderer.cpp  wavefront_obj_loader.cpp
src/zbuffer/src/widgets/: log_table.cpp
src/zbuffer/test/: CMakeLists.txt  test_zbuffer.cpp
